Ajout de deux nouveaux projets

--- a/index.html
+++ b/index.html
@@ -153,6 +153,41 @@
 								</article>
 
 
+								<article class="style3">
+									<span class="image">
+										<img src="images/vignettes/vignettes_cloud.jpg" alt="" />
+									</span>
+									<a href="07-traitement-aws-spark.html">
+									<span><mark class="mark-titre"><h2>R&eacute;aliser un traitement Big Data avec Spark</h2></mark></span>
+										<div class="content">
+										<mark class="mark-keyword">&nbsp;Spark&nbsp;</mark>
+										<mark class="mark-keyword">&nbsp;PySpark&nbsp;</mark>
+										<mark class="mark-keyword">&nbsp;Hadoop&nbsp;</mark>
+										<mark class="mark-keyword">&nbsp;AWS&nbsp;</mark>
+										<mark class="mark-keyword">&nbsp;Features Extraction&nbsp;</mark>
+										</div>
+									</a>
+								</article>
+
+
+								<article class="style3">
+									<span class="image">
+										<img src="images/vignettes/vignettes_project.jpg" alt="" />
+									</span>
+									<a href="08-cadrage-ia.html">
+									<span><mark class="mark-titre"><h2>R&eacute;aliser le cadrage d'un projet IA</h2></mark></span>
+										<div class="content">
+										<mark class="mark-keyword">&nbsp;Project scoping&nbsp;</mark>
+										<mark class="mark-keyword">&nbsp;Agile Scrum&nbsp;</mark>
+										<mark class="mark-keyword">&nbsp;RGPD&nbsp;</mark>
+										<mark class="mark-keyword">&nbsp;CNIL&nbsp;</mark>
+										<mark class="mark-keyword">&nbsp;Risk mitigation&nbsp;</mark>
+										<mark class="mark-keyword">&nbsp;Ethical issues&nbsp;</mark>
+										</div>
+									</a>
+								</article>
+
+
 
 							</section>
 						</div>
