Petits correctifs visuels

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 						</div>
 					</header>
 
-
 				<!-- Menu -->
 					<nav id="menu">
 						<h2>Menu</h2>
@@ -43,7 +42,7 @@
 							<li><a href="00-cv.html">Mon CV</a></li>
 						</ul>
 					</nav>
-
+				
 
 				<!-- Main -->
 					<div id="main">
@@ -62,11 +61,11 @@
 									<a href="01-preparer-des-donnees.html">
 										<span><h2>Pr&eacute;parer des donn&eacute;es pour un organisme de sant&eacute;</h2></span>
 										<div class="content">
-											<mark class="mark-keyword">&nbsp;Data cleaning&nbsp;</mark>
-											<mark class="mark-keyword">&nbsp;Data imputation&nbsp;</mark>
-											<mark class="mark-keyword">&nbsp;EDA&nbsp;</mark>
-											<mark class="mark-keyword">&nbsp;PCA&nbsp;</mark>
-											<mark class="mark-keyword">&nbsp;ANOVA&nbsp;</mark>
+											<mark class="mark-keyword">Data cleaning</mark>
+											<mark class="mark-keyword">Data imputation</mark>
+											<mark class="mark-keyword">EDA</mark>
+											<mark class="mark-keyword">PCA</mark>
+											<mark class="mark-keyword">ANOVA</mark>
 											</div>
 									</a>
 								</article>
@@ -77,10 +76,10 @@
 									<a href="02-anticiper-la-consommation.html">
 										<span><h2>Anticiper les besoins en consommation de b&acirc;timents</h2></span>
 										<div class="content">
-											<mark class="mark-keyword">&nbsp;Supervised learning&nbsp;</mark>
-											<mark class="mark-keyword">&nbsp;Grid search&nbsp;</mark>
-											<mark class="mark-keyword">&nbsp;Hyperparameters tunning&nbsp;</mark>
-											<mark class="mark-keyword">&nbsp;EDA&nbsp;</mark>
+											<mark class="mark-keyword">Supervised learning</mark>
+											<mark class="mark-keyword">Grid search</mark>
+											<mark class="mark-keyword">Hyperparameters tunning</mark>
+											<mark class="mark-keyword">EDA</mark>
 											</div>
 									</a>
 								</article>
@@ -91,11 +90,10 @@
 									<a href="03-segmenter-des-clients.html">
 									<span><h2>Segmenter des clients d'un site e-commerce</h2></span>
 									<div class="content">
-										<mark class="mark-keyword">&nbsp;Unsupervised learning&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Clustering&nbsp;</mark>
-										<br>
-										<mark class="mark-keyword">&nbsp;E-commerce&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;EDA&nbsp;</mark>
+										<mark class="mark-keyword">Unsupervised learning</mark>
+										<mark class="mark-keyword">Clustering</mark>
+										<mark class="mark-keyword">E-commerce</mark>
+										<mark class="mark-keyword">EDA</mark>
 										</div>
 									</a>
 								</article>
@@ -108,12 +106,11 @@
 									<a href="04-suggestion-mots-cles.html">
 									<span><h2>Suggestion automatique de mots-cl&eacute;s</h2></span>
 									<div class="content">
-										<mark class="mark-keyword">&nbsp;NLP&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Embedding&nbsp;</mark>
-										<br>
-										<mark class="mark-keyword">&nbsp;Continuous deployment&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;MLflow&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Unit Tests&nbsp;</mark>
+										<mark class="mark-keyword">NLP</mark>
+										<mark class="mark-keyword">Embedding</mark>
+										<mark class="mark-keyword">Continuous deployment</mark>
+										<mark class="mark-keyword">MLflow</mark>
+										<mark class="mark-keyword">Unit Tests</mark>
 										</div>
 									</a>
 								</article>
@@ -126,11 +123,10 @@
 									<a href="05-classer-des-images.html">
 									<span><h2>Classer des images &agrave; l'aide d'algorithmes de Deep Learning</h2></span>
 									<div class="content">
-										<mark class="mark-keyword">&nbsp;Computer Vision&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Tensorflow&nbsp;</mark>
-										<br>
-										<mark class="mark-keyword">&nbsp;Deep Learning&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Transfer Learning&nbsp;</mark>
+										<mark class="mark-keyword">Computer Vision</mark>
+										<mark class="mark-keyword">Tensorflow</mark>
+										<mark class="mark-keyword">Deep Learning</mark>
+										<mark class="mark-keyword">Transfer Learning</mark>
 										</div>
 									</a>
 								</article>
@@ -143,11 +139,11 @@
 									<a href="06-extraction-mots-cles.html">
 									<span><mark class="mark-titre"><h2>Nouvelles méthodes d'extraction de mots-cl&eacute;s</h2></mark></span>
 										<div class="content">
-										<mark class="mark-keyword">&nbsp;Proof Of Concept&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;NLP&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;KeyBERT&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Mistral&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Keywords Extraction&nbsp;</mark>
+										<mark class="mark-keyword">Proof Of Concept</mark>
+										<mark class="mark-keyword">NLP</mark>
+										<mark class="mark-keyword">KeyBERT</mark>
+										<mark class="mark-keyword">Mistral</mark>
+										<mark class="mark-keyword">Keywords Extraction</mark>
 										</div>
 									</a>
 								</article>
@@ -160,11 +156,10 @@
 									<a href="07-traitement-aws-spark.html">
 									<span><mark class="mark-titre"><h2>R&eacute;aliser un traitement Big Data avec Spark</h2></mark></span>
 										<div class="content">
-										<mark class="mark-keyword">&nbsp;Spark&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;PySpark&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Hadoop&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;AWS&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Features Extraction&nbsp;</mark>
+										<mark class="mark-keyword">Spark</mark>
+										<mark class="mark-keyword">Hadoop</mark>
+										<mark class="mark-keyword">AWS</mark>
+										<mark class="mark-keyword">Features Extraction</mark>
 										</div>
 									</a>
 								</article>
@@ -177,12 +172,12 @@
 									<a href="08-cadrage-ia.html">
 									<span><mark class="mark-titre"><h2>R&eacute;aliser le cadrage d'un projet IA</h2></mark></span>
 										<div class="content">
-										<mark class="mark-keyword">&nbsp;Project scoping&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Agile Scrum&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;RGPD&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;CNIL&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Risk mitigation&nbsp;</mark>
-										<mark class="mark-keyword">&nbsp;Ethical issues&nbsp;</mark>
+										<mark class="mark-keyword">Project scoping</mark>
+										<mark class="mark-keyword">Agile Scrum</mark>
+										<mark class="mark-keyword">RGPD</mark>
+										<mark class="mark-keyword">CNIL</mark>
+										<mark class="mark-keyword">Risk mitigation</mark>
+										<mark class="mark-keyword">Ethical issues</mark>
 										</div>
 									</a>
 								</article>
@@ -220,6 +215,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
 
 	</body>
 </html>
