--- a/index.html
+++ b/index.html
@@ -36,11 +36,20 @@
 
 				<!-- Menu -->
 					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Accueil</a></li>
-							<li><a href="00-cv.html">Mon CV</a></li>
-						</ul>
+							<h2><a href="index.html">Accueil</a></h2>
+							<h2><a href="00-cv.html">Mon CV</a></h2>
+							<hr style="height: 1px; background-color: white;">
+							<h2>Projets</h2>
+							<ul>	
+								<li><a href="01-preparer-des-donnees.html">Pr&eacute;parer des donn&eacute;es pour un organisme de sant&eacute;</a></li>
+								<li><a href="02-anticiper-la-consommation.html">Anticiper les besoins en consommation de b&acirc;timents</a></li>
+								<li><a href="03-segmenter-des-clients.html">Segmenter des clients d'un site e-commerce</a></li>
+								<li><a href="04-suggestion-mots-cles.html">Suggestion automatique de mots-cl&eacute;s</a></li>
+								<li><a href="05-classer-des-images.html">Classer des images &agrave; l'aide d'algorithmes de Deep Learning</a></li>
+								<li><a href="06-extraction-mots-cles.html">Nouvelles méthodes d'extraction de mots-cl&eacute;s</a></li>
+								<li><a href="07-traitement-aws-spark.html">R&eacute;aliser un traitement Big Data avec Spark</a></li>
+								<li><a href="08-cadrage-ia.html">R&eacute;aliser le cadrage d'un projet IA</a></li>
+							</ul>
 					</nav>
 				
 
