--- a/08-cadrage-ia.html
+++ b/08-cadrage-ia.html
@@ -45,16 +45,23 @@
 					</ul>
 				</nav>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<!-- <h1>Titre</h1> -->
-							<span class="image main"><img src="images/09-cadrage-projet-ia/09-cadrage-projet-ia.jpg" alt="Cadrage d'un projet IA" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-						</div>
-					</div>
+				<!-- Menu -->
+				<nav id="menu">
+					<h2><a href="index.html">Accueil</a></h2>
+					<h2><a href="00-cv.html">Mon CV</a></h2>
+					<hr style="height: 1px; background-color: white;">
+					<h2>Projets</h2>
+					<ul>	
+						<li><a href="01-preparer-des-donnees.html">Pr&eacute;parer des donn&eacute;es pour un organisme de sant&eacute;</a></li>
+						<li><a href="02-anticiper-la-consommation.html">Anticiper les besoins en consommation de b&acirc;timents</a></li>
+						<li><a href="03-segmenter-des-clients.html">Segmenter des clients d'un site e-commerce</a></li>
+						<li><a href="04-suggestion-mots-cles.html">Suggestion automatique de mots-cl&eacute;s</a></li>
+						<li><a href="05-classer-des-images.html">Classer des images &agrave; l'aide d'algorithmes de Deep Learning</a></li>
+						<li><a href="06-extraction-mots-cles.html">Nouvelles méthodes d'extraction de mots-cl&eacute;s</a></li>
+						<li><a href="07-traitement-aws-spark.html">R&eacute;aliser un traitement Big Data avec Spark</a></li>
+						<li><a href="08-cadrage-ia.html">R&eacute;aliser le cadrage d'un projet IA</a></li>
+					</ul>
+			</nav>
 
 				<!-- Footer -->
 				<footer id="footer">
