Ajout picto fin

--- a/01-preparer-des-donnees.html
+++ b/01-preparer-des-donnees.html
@@ -318,6 +318,10 @@
 					</blockquote>
 				</p>
 
+				<p align="center">
+					<img src="images/01-preparer-des-donnees/24-picotfin.jpg" alt="" style="max-width: 100%; height: auto;" /><br>
+				</p>
+
 						</div>
 					</div>
 
