--- a/02-anticiper-la-consommation.html
+++ b/02-anticiper-la-consommation.html
@@ -212,7 +212,7 @@
 								&mdash;&nbsp;&nbsp;Tuning des hyperparam&egrave;tres &agrave; l'aide d'un <a href="https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html">GridSearchCV</a> avec 5 folds. Ceci nous donnera un score moyen sur grid.<br>
 								&mdash;&nbsp;&nbsp;Pr&eacute;dictions des mod&egrave;les avec les meilleurs hyperparam&egrave;tres. Ceci nous donnera le score optimis&eacute;.<br>
 								<br>
-								<b>Sch&eacute;ma du Processus : </b><br>
+								<b>Sch&eacute;ma du processus : </b><br>
 
 								<img src="images/02-anticiper-la-consommation/10-processus.jpg" alt="" style="max-width: 100%; height: auto;" /><br>
 
