--- a/01-preparer-des-donnees.html
+++ b/01-preparer-des-donnees.html
@@ -169,7 +169,7 @@
 						<p>Le nombre d'entr&eacute;es augmentait progressivement, avant une cassure en 2017 :</p>
 						<img src="images/01-preparer-des-donnees/07-cassure-2017.jpg" alt="" style="max-width: 100%; height: auto;"/>
 						<br><br>
-						<p>Cette cassure provient de l'arriv&eacute;e massive des produits Am&eacute;ricains dans la base de donn&eacute;e cette m&ecirc;me ann&eacute;e :</p>
+						<p>Cette cassure provient de l'arriv&eacute;e massive des produits Am&eacute;ricains dans la base de donn&eacute;es cette m&ecirc;me ann&eacute;e :</p>
 						<img src="images/01-preparer-des-donnees/08-arrivee-usa.jpg" alt="" style="max-width: 100%; height: auto;"/>
 						<br><br>
 						<p><b>R&eacute;partition des produits dans le monde :</b></p>
@@ -309,7 +309,7 @@
 				<li>Tester d'autres m&eacute;thodes d'imputation : </li>
 				&mdash;&nbsp;&nbsp;Algorithmes de machine learning : par exemple utiliser un random forest pour imputer les variables de groupes alimentaires.
 				<br><br>
-				<li>Faire des tests approfondis quand &agrave; la qualit&eacute; des donn&eacute;es imput&eacute;es.</li>
+				<li>Faire des tests approfondis quant &agrave; la qualit&eacute; des donn&eacute;es imput&eacute;es.</li>
 				
 				<p>
 					<blockquote>
