--- a/02-anticiper-la-consommation.html
+++ b/02-anticiper-la-consommation.html
@@ -278,14 +278,14 @@
 								<h1>Importances des features</h1>
 
 								<p align="center">
-									<b>Importances globales des features repr&eacute;sent&eacute;es avec <i>KernelExplainer()</i> de la bilioth&egrave;que <a href="https://github.com/shap/shap" target="_blank"><i>SHAP</i></a></b><br><br>
+									<b>Importances globales des features repr&eacute;sent&eacute;es avec <i>KernelExplainer()</i> de la biblioth&egrave;que <a href="https://github.com/shap/shap" target="_blank"><i>SHAP</i></a></b><br><br>
 									<img src="images/02-anticiper-la-consommation/16-shap.jpg" alt="" style="max-width: 100%; height: auto;" /><br>
 									<i>On retrouve souvent certaines variables dans les plus importantes : PropertyGFABuilding(s), gas_prop, elec_prop et ENERGYSTARScore (si utilis&eacute;e).</i>
 
 								</p>
 
 								<p align="center">
-									<b>Importances locales des features repr&eacute;sent&eacute;es avec la bilioth&egrave;que <a href="https://github.com/marcotcr/lime" target="_blank">LIME</a></b><br><br>
+									<b>Importances locales des features repr&eacute;sent&eacute;es avec la biblioth&egrave;que <a href="https://github.com/marcotcr/lime" target="_blank">LIME</a></b><br><br>
 									<img src="images/02-anticiper-la-consommation/17-lime.jpg" alt="" style="max-width: 100%; height: auto;" /><br>
 									<i>Exemple avec deux instances pour les &eacute;missions de CO2 avec ENERGYSTARScore</i>
 								</p>
