--- a/03-segmenter-des-clients.html
+++ b/03-segmenter-des-clients.html
@@ -122,7 +122,7 @@
 								<br>
 								<li><b>Simplification de variables : </b></li>
 								&mdash;&nbsp;&nbsp;preferred_payment_type : 4 modalit&eacute;s &rarr; 2 modalit&eacute;s<br>
-								&mdash;&nbsp;&nbsp;preferred_category : 72 modalit&eacute;s &rarr; 10 modalit&eacute;<br>
+								&mdash;&nbsp;&nbsp;preferred_category : 72 modalit&eacute;s &rarr; 10 modalit&eacute;s<br>
 
 
 							</p>
