--- a/03-segmenter-des-clients.html
+++ b/03-segmenter-des-clients.html
@@ -390,7 +390,7 @@
 							<h1>Interpr&eacute;tations et recommandations</h1>
 
 							<p>
-								Observons les valeurs de nos variables en fonction des groupes de client obtenus.
+								Observons les valeurs de nos variables en fonction des groupes de clients obtenus.
 							</p>
 							<p align="center">
 									<img src="images/03-segmenter-des-clients/28-bkmeans-var-1.jpg" alt="" style="max-width: 100%; height: auto;" />
@@ -449,7 +449,7 @@
 									<li>Consid&eacute;rer d'autres m&eacute;thodes pour partitionner les clients.</li>
 								</ul>
 
-							Ce dernier point est tr&egrave;s important. Le but de ce projet &eacute;tait de me familiariser avec diff&eacute;rentes m&eacute;thodes de clustering bas&eacute;es sur le machine learning.
+							<b>Ce dernier point est tr&egrave;s important</b>. Le but de ce projet &eacute;tait de me familiariser avec diff&eacute;rentes m&eacute;thodes de clustering bas&eacute;es sur le machine learning.
 							Mais dans un contexte m&eacute;tier, il est indispensable, avant de mettre en place un tel syst&egrave;me qui peut s'av&eacute;rer complexe, d'&eacute;valuer si d'autres m&eacute;thodes de clustering plus simples peuvent &ecirc;tre utilis&eacute;es.
 							<br><br>
 							Ici, les features choisies nous rappellent la segmentation classique <a href="https://octolis.com/fr/blog/segmentation-rfm" target="_blank">RFM</a>.
