--- a/03-segmenter-des-clients.html
+++ b/03-segmenter-des-clients.html
@@ -375,8 +375,8 @@
 
 							<p>
 								Les r&eacute;sultats obtenus avec <i>Bisecting KMeans</i> sont-ils stables lors de diff&eacute;rentes ex&eacute;cutions du mod&egrave;le ?
-								Pour l'&eacute;valuer, un premier run sera r&eacute;alis&eacute; en fixant le <i>Random State</i>, puis de multiples run seront lanc&eacute;s sans fixer ce param&egrave;tre.
-								Ensuite, la similarit&eacute; entre les clusters obtenus lors du run initial et les run suivants sera d&eacute;termin&eacute;e avec le score ARI (Adjusted Rand Index).
+								Pour l'&eacute;valuer, un premier run sera r&eacute;alis&eacute; en fixant le <i>Random State</i>, puis de multiples runs seront lanc&eacute;s sans fixer ce param&egrave;tre.
+								Ensuite, la similarit&eacute; entre les clusters obtenus lors du run initial et les runs suivants sera d&eacute;termin&eacute;e avec le score ARI (Adjusted Rand Index).
 							</p>
 							<p align="center">
 								<b>Proc&eacute;dure d'&eacute;valuation de la stabilit&eacute;</b><br>
@@ -384,7 +384,7 @@
 									<br><i>Seuls les r&eacute;sultats des 10 premi&egrave;res it&eacute;rations sont pr&eacute;sent&eacute;es ici.</i>
 							</p>
 							<p>
-								Nous constation que <b>la stabilit&eacute; &agrave; l'initialisation est bonne</b>, puisque le score ARI ne descend pas en dessous de 0,8.
+								Nous constatons que <b>la stabilit&eacute; &agrave; l'initialisation est bonne</b>, puisque le score ARI ne descend pas en dessous de 0,8.
 							</p>
 
 							<h1>Interpr&eacute;tations et recommandations</h1>
@@ -395,7 +395,7 @@
 							<p align="center">
 									<img src="images/03-segmenter-des-clients/28-bkmeans-var-1.jpg" alt="" style="max-width: 100%; height: auto;" />
 									<img src="images/03-segmenter-des-clients/29-bkmeans-var-2.jpg" alt="" style="max-width: 100%; height: auto;" />
-									<br><i>Seuls les r&eacute;sultats des 10 premi&egrave;res it&eacute;rations sont pr&eacute;sent&eacute;s ici.</i>
+									<br><i>Seuls les r&eacute;sultats des 10 premi&egrave;res it&eacute;rations sont pr&eacute;sent&eacute;es ici.</i>
 							</p>
 							<p>
 								Ces r&eacute;sultats nous permettent de comprendre les types d'utilisateurs des diff&eacute;rents groupes et de proposer des recommandations d'actions appropri&eacute;es.
