--- a/05-classer-des-images.html
+++ b/05-classer-des-images.html
@@ -393,9 +393,9 @@ return model
 							<p>
 								<b>Trois mod&egrave;les vont &ecirc;tre test&eacute;s avec cette approche :</b>
 								<ul>
-									<li><b>VGG16</b> : 16 couches (Univ. Oxford, 2014)</li>
-									<li><b>ResNet50</b> : 50 couches (Microsoft, 2015)</li>
-									<li><b>InceptionV3</b> : 48 couches (Google, 2016)</li>
+									<li><b><a href="https://keras.io/api/applications/vgg/#vgg16-function" target="_blank">VGG16</a></b> : 16 couches (Univ. Oxford, 2014)</li>
+									<li><b><a href="https://keras.io/api/applications/resnet/#resnet50-function" target="_blank">ResNet50</a></b> : 50 couches (Microsoft, 2015)</li>
+									<li><b><a href="https://keras.io/api/applications/inceptionv3/" target="_blank">InceptionV3</a></b> : 48 couches (Google, 2016)</li>
 								</ul>
 								Ces trois mod&egrave;les ont &eacute;t&eacute; entra&icirc;n&eacute; sur 1000 classes d'<a href="https://www.image-net.org/" target="_blank">ImageNet</a>, un dataset de plusieurs millions d'images annot&eacute;es.
 								<br><br>
