target blank pour lien vers nouveau projet

--- a/04-suggestion-mots-cles.html
+++ b/04-suggestion-mots-cles.html
@@ -76,7 +76,7 @@
 								Le projet a &eacute;t&eacute; r&eacute;alis&eacute; dans un cadre <b>MLOps</b> et la plateforme <b><a href="https://mlflow.org/" target="_blank">MLflow</a></b> a &eacute;t&eacute; utilis&eacute;e.
 								<br><br>
 								<b>Remarque : </b> j'ai &eacute;galement r&eacute;alis&eacute; un autre projet sur cette m&ecirc;me th&eacute;matique (suggestion de mots-cl&eacute;s) en testant deux nouvelles approches (<b><i><a href="https://maartengr.github.io/KeyBERT/api/keybert.html" target="_blank">KeyBERT</a></i></b> et le LLM <b><i><a href="https://mistral.ai/fr/" target="_blank">Mistral</a></i></b>),
-								plus de d&eacute;tails sur <b><a href="06-extraction-mots-cles.html">cette page</a></b>.
+								plus de d&eacute;tails sur <b><a href="06-extraction-mots-cles.html" target="_blank">cette page</a></b>.
 								<br><br>
 								<b>Les objectifs du projet sont les suivants : </b>
 								<ul>
@@ -485,7 +485,7 @@ jobs:
 								</ul>
 
 								<b>Remarque : </b> j'ai &eacute;galement r&eacute;alis&eacute; un autre projet sur cette m&ecirc;me th&eacute;matique (suggestion de mots-cl&eacute;s) en testant deux nouvelles approches (<b><i><a href="https://maartengr.github.io/KeyBERT/api/keybert.html" target="_blank">KeyBERT</a></i></b> et le LLM <b><i><a href="https://mistral.ai/fr/" target="_blank">Mistral</a></i></b>),
-								plus de d&eacute;tails sur <b><a href="06-extraction-mots-cles.html">cette page</a></b>.
+								plus de d&eacute;tails sur <b><a href="06-extraction-mots-cles.html" target="_blank">cette page</a></b>.
 
 
 							<p>
