--- a/04-suggestion-mots-cles.html
+++ b/04-suggestion-mots-cles.html
@@ -115,7 +115,7 @@
 							<p align="center">
 								<b>Utilisation de la biblioth&egrave;que StackAPI : </b><br><br>
 									<img src="images/04-suggestion-mots-cles/05-stack-api.jpg" alt="" style="max-width: 100%; height: auto;" /><br>
-									<b>Utilisation de la biblioth&egrave;que StackAPI : </b><br><br>
+									<b>Utilisation du Stack Data Exchange Explorer : </b><br><br>
 									<img src="images/04-suggestion-mots-cles/06-stack-exchange.jpg" alt="" style="max-width: 100%; height: auto;" />	
 							</p>
 							<p>
