Correction caractère spécial

--- a/02-anticiper-la-consommation.html
+++ b/02-anticiper-la-consommation.html
@@ -63,7 +63,7 @@
 
 							<p>Ce projet est bas&eacute; sur le dataset <a href="https://data.seattle.gov/Permitting/2016-Building-Energy-Benchmarking/2bpz-gwpy/about_data" target="_blank">2016 Building Energy Benchmarking</a>.
 								Il s'agit de relev&eacute;s minutieux d'&eacute;missions de CO2 et de consommation d'&eacute;nergie effectu&eacute;s par les agents de la ville de Seattle sur des b&acirc;timents en 2016.<br>
-							Ce relev&eacute;s sont coûteux &agrave; r&eacute;aliser, nous allons donc voir s'il est possible de faire des pr&eacute;dictions de ces variables en fonction des donn&eacute;es structurelles des b&acirc;timents.
+							Ce relev&eacute;s sont co&ucirc;teux &agrave; r&eacute;aliser, nous allons donc voir s'il est possible de faire des pr&eacute;dictions de ces variables en fonction des donn&eacute;es structurelles des b&acirc;timents.
 							Nous baserons ici nos exp&eacute;riences sur les b&acirc;timents non destin&eacute;s &agrave; l'habitation.<br>
 							Il sera &eacute;galement &eacute;valu&eacute; la pertinence de la variable <a href="https://www.energystar.gov/" target="_blank">ENERGY STAR Score</a> pour nos pr&eacute;dictions.
 											
@@ -301,8 +301,8 @@
 									<li>Nous nous sommes bas&eacute;s sur des donn&eacute;es structurelles et g&eacute;ographiques.</li>
 									<li>La variable ENERGY STAR Score n'a pas un impact tr&egrave;s important sur les pr&eacute;dictions, qui restent satisfaisantes sans utiliser cette derni&egrave;re.</li>
 									<li>Bien que fournissant de bonnes pr&eacute;dictions, TensorFlow pr&eacute;sente des d&eacute;fauts :</li>
-										&mdash;&nbsp;&nbsp;Il est coûteux en ressources, ce qui peut rendre les GridSearchCV tr&egrave;s longs et ainsi compliquer les tests de nombreux hyperparam&egrave;tres. Les calculs peuvent cependant &ecirc;tre acc&eacute;l&eacute;r&eacute;s avec un/des GPU.<br>
-										&mdash;&nbsp;&nbsp;L'explication globale pour ce mod&egrave;le avec SHAP est coûteuse en ressources.<br>
+										&mdash;&nbsp;&nbsp;Il est co&ucirc;teux en ressources, ce qui peut rendre les GridSearchCV tr&egrave;s longs et ainsi compliquer les tests de nombreux hyperparam&egrave;tres. Les calculs peuvent cependant &ecirc;tre acc&eacute;l&eacute;r&eacute;s avec un/des GPU.<br>
+										&mdash;&nbsp;&nbsp;L'explication globale pour ce mod&egrave;le avec SHAP est co&ucirc;teuse en ressources.<br>
 								</p>
 
 
