--- a/01-preparer-des-donnees.html
+++ b/01-preparer-des-donnees.html
@@ -57,7 +57,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<span class="image main"><img src="images/01-preparer-des-donnees/01-preparer-des-donnees-titre.png" alt="Pr&eacute;parer des donn&eacute;es pour un organisme de sant&eacute;" /></span>
+							<span class="image main"><img src="images/01-preparer-des-donnees/01-preparer-des-donnees-titre.jpg" alt="Pr&eacute;parer des donn&eacute;es pour un organisme de sant&eacute;" /></span>
 
 							<h1>Introduction</h1>
 							<p>
@@ -81,7 +81,7 @@
 							<p>
 								<blockquote>
 									<img src="images/info.png" width="35" height="35"/>
-									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Nettoyage-et-EDA" target="_blank">mon GitHub</a></b></span>
 								</blockquote>
 							</p>
 
@@ -314,7 +314,7 @@
 				<p>
 					<blockquote>
 						<img src="images/info.png" width="35" height="35"/>
-						<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+						<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Nettoyage-et-EDA" target="_blank">mon GitHub</a></b></span>
 					</blockquote>
 				</p>
 
