--- a/02-anticiper-la-consommation.html
+++ b/02-anticiper-la-consommation.html
@@ -57,7 +57,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<span class="image main"><img src="images/02-anticiper-la-consommation/02-anticiper-la-consommation-titre.png" alt="Anticiper les besoins en consommation de b&acirc;timents" /></span>
+							<span class="image main"><img src="images/02-anticiper-la-consommation/01-anticiper-la-consommation-titre.jpg" alt="Anticiper les besoins en consommation de b&acirc;timents" /></span>
 
 							<h1>Introduction</h1>
 
@@ -83,7 +83,7 @@
 						<p>
 							<blockquote>
 								<img src="images/info.png" width="35" height="35"/>
-								<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+								<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Predire-Consommation-et-Emissions-de-Batiments" target="_blank">mon GitHub</a></b></span>
 							</blockquote>
 						</p>
 
@@ -320,7 +320,7 @@
 							<p>
 								<blockquote>
 									<img src="images/info.png" width="35" height="35"/>
-									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Predire-Consommation-et-Emissions-de-Batiments" target="_blank">mon GitHub</a></b></span>
 								</blockquote>
 							</p>
 
