Modif lien repo

--- a/03-segmenter-des-clients.html
+++ b/03-segmenter-des-clients.html
@@ -94,7 +94,7 @@
 							<p>
 								<blockquote>
 									<img src="images/info.png" width="35" height="35"/>
-									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Segmenter-les-clients-site-e-commerce" target="_blank">mon GitHub</a></b></span>
 								</blockquote>
 							</p>
 
@@ -464,7 +464,7 @@
 							<p>
 								<blockquote>
 									<img src="images/info.png" width="35" height="35"/>
-									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Segmenter-les-clients-site-e-commerce" target="_blank">mon GitHub</a></b></span>
 								</blockquote>
 							</p>
 
