Modif liens repos

--- a/04-suggestion-mots-cles.html
+++ b/04-suggestion-mots-cles.html
@@ -101,7 +101,7 @@
 							<p>
 								<blockquote>
 									<img src="images/info.png" width="35" height="35"/>
-									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+									<span><b>Retrouvez tout le code de ce projet sur mon GitHub : <a href="https://github.com/BiGHeaDMaX/Suggestion-automatique-de-mots-cles/" target="_blank">travail d'élaboration</a> et <a href="https://github.com/BiGHeaDMaX/Suggestion-automatique-de-mots-cles-API/" target="_blank">code de l'API</a></b></span>
 								</blockquote>
 							</p>
 
@@ -488,12 +488,12 @@ jobs:
 								plus de d&eacute;tails sur <b><a href="06-extraction-mots-cles.html" target="_blank">cette page</a></b>.
 
 
-							<p>
-								<blockquote>
-									<img src="images/info.png" width="35" height="35"/>
-									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
-								</blockquote>
-							</p>
+								<p>
+									<blockquote>
+										<img src="images/info.png" width="35" height="35"/>
+										<span><b>Retrouvez tout le code de ce projet sur mon GitHub : <a href="https://github.com/BiGHeaDMaX/Suggestion-automatique-de-mots-cles/" target="_blank">travail d'élaboration</a> et <a href="https://github.com/BiGHeaDMaX/Suggestion-automatique-de-mots-cles-API/" target="_blank">code de l'API</a></b></span>
+									</blockquote>
+								</p>
 
 
 						</div>
