Modif titre et lien repo

--- a/05-classer-des-images.html
+++ b/05-classer-des-images.html
@@ -57,7 +57,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<span class="image main"><img src="images/05-classer-des-images/05-classer-des-images-titre.png" alt="Classer des images &agrave; gr&acirc;ce au Deep Learning" /></span>
+							<span class="image main"><img src="images/05-classer-des-images/01-classer-des-images-titre.jpg" alt="Classer des images &agrave; gr&acirc;ce au Deep Learning" /></span>
 
 							<h1>Introduction</h1>
 
@@ -92,7 +92,7 @@
 							<p>
 								<blockquote>
 									<img src="images/info.png" width="35" height="35"/>
-									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Identifier-Races-Chiens-avec-TensorFlow/" target="_blank">mon GitHub</a></b></span>
 								</blockquote>
 							</p>
 
@@ -651,7 +651,7 @@ if __name__ == "__main__":
 							<p>
 								<blockquote>
 									<img src="images/info.png" width="35" height="35"/>
-									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+									<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Identifier-Races-Chiens-avec-TensorFlow/" target="_blank">mon GitHub</a></b></span>
 								</blockquote>
 							</p>
 
