--- a/06-extraction-mots-cles.html
+++ b/06-extraction-mots-cles.html
@@ -79,7 +79,7 @@
 								<p>
 									<blockquote>
 										<img src="images/info.png" width="35" height="35"/>
-										<span><b>Retrouvez tout le code et les fichiers de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+										<span><b>Retrouvez tout le code et les fichiers de ce projet sur <a href="https://github.com/BiGHeaDMaX/Nouvelles-methodes-extraction-mots-cles" target="_blank">mon GitHub</a></b></span>
 									</blockquote>
 								</p>	
 
@@ -361,7 +361,7 @@ Make sure you to only return the {nb_tags} keywords and say nothing else. Not tw
 							<p>
 								<blockquote>
 									<img src="images/info.png" width="35" height="35"/>
-									<span><b>Retrouvez tout le code et les fichiers de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+									<span><b>Retrouvez tout le code et les fichiers de ce projet sur <a href="https://github.com/BiGHeaDMaX/Nouvelles-methodes-extraction-mots-cles" target="_blank">mon GitHub</a></b></span>
 								</blockquote>
 							</p>
 						
