--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										<img src="images/vignettes/vignettes_tree.jpg" alt="" />
 									</span>
 									<a href="01-preparer-des-donnees.html">
-										<span><h2>Pr&eacute;parer des donn&eacute;es pour un organisme de sant&eacute;</h2></span>
+										<span><h2>Pr&eacute;parer des donn&eacute;es et mener une analyse exploratoire</h2></span>
 										<div class="content">
 											<mark class="mark-keyword">Data cleaning</mark>
 											<mark class="mark-keyword">Data imputation</mark>
@@ -83,7 +83,7 @@
 										<img src="images/vignettes/vignette_anticiper.jpg" alt="" />
 									</span>
 									<a href="02-anticiper-la-consommation.html">
-										<span><h2>Anticiper les besoins en consommation de b&acirc;timents</h2></span>
+										<span><h2>Pr&eacute;dire la consommation et les &eacute;missions de b&acirc;timents</h2></span>
 										<div class="content">
 											<mark class="mark-keyword">Supervised learning</mark>
 											<mark class="mark-keyword">Grid search</mark>
@@ -97,7 +97,7 @@
 										<img src="images/vignettes/vignettes_ecommerce.jpg" alt="" />
 									</span>
 									<a href="03-segmenter-des-clients.html">
-									<span><h2>Segmenter des clients d'un site e-commerce</h2></span>
+									<span><h2>Segmenter les clients d'un site e-commerce</h2></span>
 									<div class="content">
 										<mark class="mark-keyword">Unsupervised learning</mark>
 										<mark class="mark-keyword">Clustering</mark>
@@ -130,7 +130,7 @@
 										<img src="images/vignettes/vignettes_deep_learning.jpg" alt="" />
 									</span>
 									<a href="05-classer-des-images.html">
-									<span><h2>Classer des images &agrave; l'aide d'algorithmes de Deep Learning</h2></span>
+									<span><h2>Identifier des races de chiens sur des photos avec TensorFlow</h2></span>
 									<div class="content">
 										<mark class="mark-keyword">Computer Vision</mark>
 										<mark class="mark-keyword">Tensorflow</mark>
