--- a/07-traitement-aws-spark.html
+++ b/07-traitement-aws-spark.html
@@ -57,7 +57,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<span class="image main"><img src="images/07-realiser-un-traitement/01-realiser-un-traitement.png" alt="Traitement Spark" /></span>
+							<span class="image main"><img src="images/07-realiser-un-traitement/01-realiser-un-traitement.jpg" alt="Traitement Spark" /></span>
 						<h1>Introduction</h1>
 						<p>
 							Ce projet a pour but de <b>r&eacute;aliser un traitement sur des donn&eacute;es volumineuses &agrave; l'aide de Spark dans le cloud</b>.
@@ -88,7 +88,7 @@
 						<p>
 							<blockquote>
 								<img src="images/info.png" width="35" height="35"/>
-								<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+								<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Traitement-Big-Data-avec-Spark" target="_blank">mon GitHub</a></b></span>
 							</blockquote>
 						</p>
 						
@@ -311,10 +311,11 @@
 
 						</p>
 
+
 						<p>
 							<blockquote>
 								<img src="images/info.png" width="35" height="35"/>
-								<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX?tab=repositories" target="_blank">mon GitHub</a></b></span>
+								<span><b>Retrouvez tout le code de ce projet sur <a href="https://github.com/BiGHeaDMaX/Traitement-Big-Data-avec-Spark" target="_blank">mon GitHub</a></b></span>
 							</blockquote>
 						</p>
 
